tests/negative/gold/incomplete_string2_test.gold
tests/negative/incomplete_string2_test.toit:9:9: error: Unterminated string
    $(z)
        ^
tests/negative/incomplete_string2_test.toit:7:7: error: Type mismatch. Expected 'int'. Got 'string'
  foo "str"
      ^~~~~
Compilation failed.
